# litnergy

./: .gitignore  Cargo.toml  README.en.md  README.md  protocol_reference.md
.ccls-cache/@@home@jeoo@Program@litnergy/: @usr@include@bits@libc-header-start.h.blob  @usr@include@bits@long-double.h.blob  @usr@include@bits@stdint-intn.h.blob  @usr@include@bits@stdint-least.h.blob  @usr@include@bits@stdint-uintn.h.blob  @usr@include@bits@time64.h.blob  @usr@include@bits@timesize.h.blob  @usr@include@bits@types.h.blob  @usr@include@bits@typesizes.h.blob  @usr@include@bits@wchar.h.blob  @usr@include@bits@wordsize.h.blob  @usr@include@c++@16.1.1@cstdint.blob  @usr@include@c++@16.1.1@pstl@pstl_config.h.blob  @usr@include@c++@16.1.1@x86_64-pc-linux-gnu@bits@c++config.h  @usr@include@c++@16.1.1@x86_64-pc-linux-gnu@bits@c++config.h.blob  @usr@include@c++@16.1.1@x86_64-pc-linux-gnu@bits@cpu_defines.h.blob  @usr@include@c++@16.1.1@x86_64-pc-linux-gnu@bits@os_defines.h.blob  @usr@include@features-time64.h.blob  @usr@include@features.h.blob  @usr@include@gnu@stubs-64.h.blob  @usr@include@gnu@stubs.h.blob  @usr@include@stdc-predef.h.blob  @usr@include@stdint.h.blob  @usr@include@sys@cdefs.h.blob  @usr@lib@clang@22@include@stdint.h.blob
.ccls-cache/@home@jeoo@Program@litnergy/: ProtocolTypes.h.blob
src/: client.rs  clipboard.rs  dev.rs  handler.rs  helper.rs  main.rs  protocol.rs
src/dev/: linux.rs  macos.rs  mouse.rs
