[package]
name = "litnergy"
version = "0.1.0"
edition = "2024"

[dependencies]
log = "0.4.32"
simplelog = "0.12.2"
clap = { version = "4.6.1", features = ["derive"] }

[target.'cfg(target_os = "linux")'.dependencies]
evdev-rs = "0.6.3"

[target.'cfg(target_os = "macos")'.dependencies]
core-graphics = { version = "0.25.0", features = ["highsierra"] }
